# Text_Classification

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  mlflow.db  project_structure.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci-cd.yaml
config/: config.yaml  params.yaml
k8s/: deployment.yaml  service.yaml
notebooks/: Text_Classification_on_MRPC_Dataset_(PyTorch).ipynb  Text_Classification_on_the_IMDb_dataset_(PyTorch).ipynb  colab_run.ipynb
src/text_classification/components/: data_loader.py  data_preprocessing.py  data_validation.py  model_evaluation.py  model_trainer.py
src/text_classification/config/: configuration.py
src/text_classification/constants/: constants.py
src/text_classification/entity/: config_entity.py
src/text_classification/logging/: logger.py
src/text_classification/pipeline/: 01_data_loader_pipeline.py  05_prediction_pipeline.py  prediction_pipeline.py  stage_02_data validation.py  stage_03_data_preprocessing.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/text_classification/utils/: common.py
tests/: test_app_health.py
