# ========================================================================
# pyproject.toml — MLOps-NLP Package Configuration
# ========================================================================

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_classification"
version = "0.1.0"
description = "Modern NLP text classification pipeline with MLOps best practices"
readme = "README.md"
authors = [
  { name = "Md. Ashaduzzaman Sarker", email = "ashaduzzaman2505@gmail.com" }
]
requires-python = ">=3.9"
license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Core NLP
  "transformers[sentencepiece]>=4.45.0",
  "datasets>=3.1.0",
  "tokenizers>=0.20.1",
  "sentencepiece>=0.2.0",
  "evaluate>=0.4.1",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.4.0",
  "bert-score>=0.3.13",

  # Deep Learning
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "accelerate>=1.2.0",

  # Utilities
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=17.0.0",
  "nltk>=3.9.1",
  "tqdm>=4.66.0",
  "PyYAML>=6.0.1",
  "python-box>=7.2.0",
  "ensure>=1.0.3",
  "py7zr>=0.21.0",

  # Web & Deployment
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.51.0",
  "Jinja2>=3.1.3",
  "gunicorn>=22.0.0",

  # Cloud & Storage
  "huggingface-hub>=0.24.0",
  "requests>=2.32.0",
  "boto3>=1.34.0",
  "mypy-boto3-s3>=1.34.0",

  # Visualization & Monitoring
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "tensorboard>=2.17.0",

  # MLOps & Experiment Tracking
  "mlflow>=2.15.0",
  "dvc[s3]>=3.51.0",
  "wandb>=0.17.0",

  # Dev & Testing
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "flake8>=7.1.0",
  "black>=24.8.0",
  "isort>=5.13.0",
  "mypy>=1.10.0",
  "notebook>=5.7.6",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest", "pytest-cov", "pytest-asyncio", "mypy"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
deploy = ["uvicorn[standard]", "gunicorn", "gradio"]

[project.urls]
Homepage = "https://github.com/ashaduzzaman-sarker/Text_Classification"
"Bug Tracker" = "https://github.com/ashaduzzaman-sarker/Text_Classification/issues"
Documentation = "https://ashaduzzaman-sarker.github.io/Text_Classification"

[tool.setuptools.packages.find]
where = ["src"]
